Opened 14 years ago

Closed 14 years ago

#7537 closed bug (fixed)

Patch for the "'noreturn' function returns" warning on call to assert(0)

Reported by: unitedroad Owned by: korli
Priority: normal Milestone: R1
Component: System/POSIX Version: R1/alpha2
Keywords: noreturn, assert Cc:
Blocked By: Blocking:
Platform: All

Description

I am submitting a patch for the "'noreturn' function returns" warning on call to assert(0).

Some applications expect assert(0) to be a noreturn function and rely on this. Hence, the calling functions are declared as noreturn themselves. When this is not so, GCC throws the warning.

Attachments (1)

assert.patch (618 bytes ) - added by unitedroad 14 years ago.
Patch

Download all attachments as: .zip

Change History (4)

by unitedroad, 14 years ago

Attachment: assert.patch added

Patch

comment:1 by unitedroad, 14 years ago

patch: 01

comment:2 by korli, 14 years ago

Owner: changed from nobody to korli
Status: newassigned

comment:3 by korli, 14 years ago

Resolution: fixed
Status: assignedclosed

Applied in hrev41628. Thanks!

Note: See TracTickets for help on using tickets.